--- a/app/src/main/res/layout/activity_mqtt_connect.xml
+++ b/app/src/main/res/layout/activity_mqtt_connect.xml
@@ -1,150 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 使用 ConstraintLayout 作為根佈局，它非常適合適應不同尺寸的螢幕 -->
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- 在最外層加入 ScrollView -->
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="48dp"> <!-- 為平板增加更大的邊距 -->
+    android:fillViewport="true">
 
-    <!-- 頁面標題 -->
-    <TextView
-        android:id="@+id/textView_title"
-        android:layout_width="wrap_content"
+    <!-- 將原本的 ConstraintLayout 放在 ScrollView 內部 -->
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="MQTT 連線設定"
-        android:textSize="40sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:padding="48dp">
 
-    <!-- Broker 地址標籤 -->
-    <TextView
-        android:id="@+id/textView_broker"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:text="Broker 地址:"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_title" />
+        <!-- 頁面標題 -->
+        <TextView
+            android:id="@+id/textView_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MQTT 連線設定"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Broker 地址輸入框 -->
-    <EditText
-        android:id="@+id/editText_broker"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:ems="10"
-        android:hint="例如: tcp://broker.hivemq.com"
-        android:inputType="textUri"
-        android:text="tcp://broker.hivemq.com"
-        android:textSize="22sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_broker"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_broker" />
+        <!-- Broker 地址標籤 -->
+        <TextView
+            android:id="@+id/textView_broker"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:text="Broker 地址:"
+            android:textSize="22sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_title" />
 
-    <!-- Port 標籤 -->
-    <TextView
-        android:id="@+id/textView_port"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Port:"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_broker" />
+        <!-- Broker 地址輸入框 -->
+        <EditText
+            android:id="@+id/editText_broker"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:ems="10"
+            android:hint="例如: tcp://broker.hivemq.com"
+            android:inputType="textUri"
+            android:text="tcp://broker.mqttgo.io"
+            android:textSize="22sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView_broker"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView_broker" />
 
-    <!-- Port 輸入框 -->
-    <EditText
-        android:id="@+id/editText_port"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:ems="10"
-        android:hint="例如: 1883"
-        android:inputType="number"
-        android:text="1883"
-        android:textSize="22sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_port"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_port" />
+        <!-- Port 標籤 -->
+        <TextView
+            android:id="@+id/textView_port"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="Port:"
+            android:textSize="22sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_broker" />
 
-    <!-- Client ID 標籤 -->
-    <TextView
-        android:id="@+id/textView_clientId"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Client ID:"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_port" />
+        <!-- Port 輸入框 -->
+        <EditText
+            android:id="@+id/editText_port"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:ems="10"
+            android:hint="例如: 1883"
+            android:inputType="number"
+            android:text="1883"
+            android:textSize="22sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView_port"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView_port" />
 
-    <!-- Client ID 輸入框 -->
-    <EditText
-        android:id="@+id/editText_clientId"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:ems="10"
-        android:hint="（留空則自動產生）"
-        android:inputType="text"
-        android:textSize="22sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_clientId"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_clientId" />
+        <!-- Client ID 標籤 -->
+        <TextView
+            android:id="@+id/textView_clientId"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="Client ID:"
+            android:textSize="22sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_port" />
 
-    <!-- Topic 標籤 -->
-    <TextView
-        android:id="@+id/textView_topic"
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="訂閱主題:"
-        android:textSize="22sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_clientId" />
+        <!-- Client ID 輸入框 -->
+        <EditText
+            android:id="@+id/editText_clientId"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:ems="10"
+            android:hint="（留空則自動產生）"
+            android:inputType="text"
+            android:textSize="22sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView_clientId"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView_clientId" />
 
-    <!-- Topic 輸入框 -->
-    <EditText
-        android:id="@+id/editText_topic"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:ems="10"
-        android:hint="例如: nuwa/command"
-        android:inputType="text"
-        android:text="nuwa/command"
-        android:textSize="22sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/textView_topic"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView_topic" />
+        <!-- Topic 標籤 -->
+        <TextView
+            android:id="@+id/textView_topic"
+            android:layout_width="140dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="訂閱主題:"
+            android:textSize="22sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView_clientId" />
 
-    <!-- 連線按鈕 -->
-    <Button
-        android:id="@+id/button_connect"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp"
-        android:text="連線"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_topic" />
+        <!-- Topic 輸入框 -->
+        <EditText
+            android:id="@+id/editText_topic"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:ems="10"
+            android:hint="例如: nuwa/command"
+            android:inputType="text"
+            android:text="nuwa/command"
+            android:textSize="22sp"
+            app:layout_constraintBaseline_toBaselineOf="@+id/textView_topic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView_topic" />
 
-    <!-- 連線狀態文字 -->
-    <TextView
-        android:id="@+id/textView_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="狀態：尚未連線"
-        android:textSize="20sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_connect" />
+        <!-- 連線按鈕 -->
+        <Button
+            android:id="@+id/button_connect"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="48dp"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:text="連線"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText_topic" />
 
-</android.support.constraint.ConstraintLayout>
+        <!-- 連線狀態文字 -->
+        <TextView
+            android:id="@+id/textView_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="狀態：尚未連線"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button_connect" />
+
+    </android.support.constraint.ConstraintLayout>
+
+</ScrollView>
