--- a/app/src/main/res/layout/activity_mqtt_dashboard.xml
+++ b/app/src/main/res/layout/activity_mqtt_dashboard.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +9,10 @@
     android:padding="16dp">
 
     <!-- 中央的機器人背景圖片 -->
+
+    <!-- 左側馬達數據 -->
+    <!-- 左肩 Z -->
+
     <ImageView
         android:id="@+id/imageView_robot"
         android:layout_width="300dp"
@@ -17,10 +22,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.324"
         tools:ignore="ContentDescription" />
 
-    <!-- 左側馬達數據 -->
-    <!-- 左肩 Z -->
     <LinearLayout
         android:id="@+id/layout_l_shoulder_z"
         android:layout_width="wrap_content"
@@ -28,11 +32,17 @@
         android:layout_marginEnd="16dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/layout_l_shoulder_y"
         app:layout_constraintEnd_toStartOf="@+id/imageView_robot"
-        app:layout_constraintTop_toTopOf="@+id/imageView_robot"
-        app:layout_constraintBottom_toTopOf="@+id/layout_l_shoulder_y">
-        <TextView style="@style/MotorLabel" android:text="左肩旋轉:" />
-        <TextView style="@style/MotorValue" android:id="@+id/textView_l_shoulder_z" />
+        app:layout_constraintTop_toTopOf="@+id/imageView_robot">
+
+        <TextView
+            style="@style/MotorLabel"
+            android:text="左肩旋轉:" />
+
+        <TextView
+            android:id="@+id/textView_l_shoulder_z"
+            style="@style/MotorValue" />
     </LinearLayout>
 
     <!-- 左肩 Y -->
@@ -42,11 +52,17 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/layout_l_shoulder_x"
         app:layout_constraintEnd_toEndOf="@+id/layout_l_shoulder_z"
-        app:layout_constraintTop_toBottomOf="@+id/layout_l_shoulder_z"
-        app:layout_constraintBottom_toTopOf="@+id/layout_l_shoulder_x">
-        <TextView style="@style/MotorLabel" android:text="左肩側抬:" />
-        <TextView style="@style/MotorValue" android:id="@+id/textView_l_shoulder_y" />
+        app:layout_constraintTop_toBottomOf="@+id/layout_l_shoulder_z">
+
+        <TextView
+            style="@style/MotorLabel"
+            android:text="左肩側抬:" />
+
+        <TextView
+            android:id="@+id/textView_l_shoulder_y"
+            style="@style/MotorValue" />
     </LinearLayout>
 
     <!-- 左肩 X -->
@@ -56,11 +72,17 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/layout_l_elbow_y"
         app:layout_constraintEnd_toEndOf="@+id/layout_l_shoulder_y"
-        app:layout_constraintTop_toBottomOf="@+id/layout_l_shoulder_y"
-        app:layout_constraintBottom_toTopOf="@+id/layout_l_elbow_y">
-        <TextView style="@style/MotorLabel" android:text="左肩前後:" />
-        <TextView style="@style/MotorValue" android:id="@+id/textView_l_shoulder_x" />
+        app:layout_constraintTop_toBottomOf="@+id/layout_l_shoulder_y">
+
+        <TextView
+            style="@style/MotorLabel"
+            android:text="左肩前後:" />
+
+        <TextView
+            android:id="@+id/textView_l_shoulder_x"
+            style="@style/MotorValue" />
     </LinearLayout>
 
     <!-- 左手肘 Y -->
@@ -70,11 +92,17 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView_robot"
         app:layout_constraintEnd_toEndOf="@+id/layout_l_shoulder_x"
-        app:layout_constraintTop_toBottomOf="@+id/layout_l_shoulder_x"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_robot">
-        <TextView style="@style/MotorLabel" android:text="左手肘彎曲:" />
-        <TextView style="@style/MotorValue" android:id="@+id/textView_l_elbow_y" />
+        app:layout_constraintTop_toBottomOf="@+id/layout_l_shoulder_x">
+
+        <TextView
+            style="@style/MotorLabel"
+            android:text="左手肘彎曲:" />
+
+        <TextView
+            android:id="@+id/textView_l_elbow_y"
+            style="@style/MotorValue" />
     </LinearLayout>
 
 
@@ -87,11 +115,17 @@
         android:layout_marginStart="16dp"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/layout_r_shoulder_y"
         app:layout_constraintStart_toEndOf="@+id/imageView_robot"
-        app:layout_constraintTop_toTopOf="@+id/imageView_robot"
-        app:layout_constraintBottom_toTopOf="@+id/layout_r_shoulder_y">
-        <TextView style="@style/MotorLabel" android:text="右肩旋轉:" />
-        <TextView style="@style/MotorValue" android:id="@+id/textView_r_shoulder_z" />
+        app:layout_constraintTop_toTopOf="@+id/imageView_robot">
+
+        <TextView
+            style="@style/MotorLabel"
+            android:text="右肩旋轉:" />
+
+        <TextView
+            android:id="@+id/textView_r_shoulder_z"
+            style="@style/MotorValue" />
     </LinearLayout>
 
     <!-- 右肩 Y -->
@@ -101,11 +135,17 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/layout_r_shoulder_x"
         app:layout_constraintStart_toStartOf="@+id/layout_r_shoulder_z"
-        app:layout_constraintTop_toBottomOf="@+id/layout_r_shoulder_z"
-        app:layout_constraintBottom_toTopOf="@+id/layout_r_shoulder_x">
-        <TextView style="@style/MotorLabel" android:text="右肩側抬:" />
-        <TextView style="@style/MotorValue" android:id="@+id/textView_r_shoulder_y" />
+        app:layout_constraintTop_toBottomOf="@+id/layout_r_shoulder_z">
+
+        <TextView
+            style="@style/MotorLabel"
+            android:text="右肩側抬:" />
+
+        <TextView
+            android:id="@+id/textView_r_shoulder_y"
+            style="@style/MotorValue" />
     </LinearLayout>
 
     <!-- 右肩 X -->
@@ -115,11 +155,17 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/layout_r_elbow_y"
         app:layout_constraintStart_toStartOf="@+id/layout_r_shoulder_y"
-        app:layout_constraintTop_toBottomOf="@+id/layout_r_shoulder_y"
-        app:layout_constraintBottom_toTopOf="@+id/layout_r_elbow_y">
-        <TextView style="@style/MotorLabel" android:text="右肩前後:" />
-        <TextView style="@style/MotorValue" android:id="@+id/textView_r_shoulder_x" />
+        app:layout_constraintTop_toBottomOf="@+id/layout_r_shoulder_y">
+
+        <TextView
+            style="@style/MotorLabel"
+            android:text="右肩前後:" />
+
+        <TextView
+            android:id="@+id/textView_r_shoulder_x"
+            style="@style/MotorValue" />
     </LinearLayout>
 
     <!-- 右手肘 Y -->
@@ -129,11 +175,17 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView_robot"
         app:layout_constraintStart_toStartOf="@+id/layout_r_shoulder_x"
-        app:layout_constraintTop_toBottomOf="@+id/layout_r_shoulder_x"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_robot">
-        <TextView style="@style/MotorLabel" android:text="右手肘彎曲:" />
-        <TextView style="@style/MotorValue" android:id="@+id/textView_r_elbow_y" />
+        app:layout_constraintTop_toBottomOf="@+id/layout_r_shoulder_x">
+
+        <TextView
+            style="@style/MotorLabel"
+            android:text="右手肘彎曲:" />
+
+        <TextView
+            android:id="@+id/textView_r_elbow_y"
+            style="@style/MotorValue" />
     </LinearLayout>
 
 
@@ -148,8 +200,14 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/imageView_robot"
         app:layout_constraintEnd_toStartOf="@+id/guideline_center">
-        <TextView style="@style/MotorLabel" android:text="脖子上下:" />
-        <TextView style="@style/MotorValue" android:id="@+id/textView_neck_y" />
+
+        <TextView
+            style="@style/MotorLabel"
+            android:text="脖子上下:" />
+
+        <TextView
+            android:id="@+id/textView_neck_y"
+            style="@style/MotorValue" />
     </LinearLayout>
 
     <!-- 脖子 Z -->
@@ -161,12 +219,18 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/layout_neck_y"
         app:layout_constraintStart_toEndOf="@+id/guideline_center">
-        <TextView style="@style/MotorLabel" android:text="脖子旋轉:" />
-        <TextView style="@style/MotorValue" android:id="@+id/textView_neck_z" />
+
+        <TextView
+            style="@style/MotorLabel"
+            android:text="脖子旋轉:" />
+
+        <TextView
+            android:id="@+id/textView_neck_z"
+            style="@style/MotorValue" />
     </LinearLayout>
 
     <!-- 輔助線，用於對齊頂部元件 -->
-    <android.support.constraint.Guideline
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -175,11 +239,12 @@
 
 
     <!-- 底部即時訊息 -->
+
     <TextView
         android:id="@+id/textView_log_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="4dp"
         android:text="即時訊息"
         android:textColor="@android:color/black"
         android:textSize="22sp"
@@ -207,4 +272,9 @@
             android:textSize="16sp" />
     </ScrollView>
 
-</android.support.constraint.ConstraintLayout>
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/group"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
